Added deep-copy presentation section.

--- a/shared/presentation/presentation.tex
+++ b/shared/presentation/presentation.tex
@@ -29,6 +29,9 @@
 \section{Outsourcing computation to C}
 \include{c}
 
+\section{Minimising Deepcopies}
+\include{deepcopy}
+
 \section{Results}
 \include{results}
 
