Moved header to main file.

--- a/shared/presentation/presentation.tex
+++ b/shared/presentation/presentation.tex
@@ -1,8 +1,22 @@
-\include{preamble}
+\documentclass{beamer}
+\usetheme{Darmstadt}
+\usecolortheme{orchid}
+
+\useoutertheme{infolines} % infolines, miniframes, shadow, sidebar, smoothbars, smoothtree, split, tree
+\useinnertheme{rectangles} % rectangles, circles, inmargin, rounded
+
+\setbeamertemplate{blocks}[rounded][shadow=true]
+
+% suppress navigation bar
+\beamertemplatenavigationsymbolsempty
+
+% Additional packages
+\usepackage{color}
+\usepackage{graphicx}
 
 \title[Practical Course]{Practical Course in Bioinformatics}
-\subtitle{Software Lab -- Final Presentation}
-\author[M. Berrendorf]{Max Berrendorf \and}
+\subtitle{Algorithm Group -- Final Presentation}
+\author[Berrendorf, Raissi, Lange]{Max Berrendorf \and Thomas Lange \and Tina Raissi}
 \institute[]{ZKF Research Group Computational Biology and Bioinformatics\\
 	Helmholtz Institute for Biomedical Engineering\\
 	RWTH University Hospital
