--- a/shared/presentation/presentation.tex
+++ b/shared/presentation/presentation.tex
@@ -32,7 +32,7 @@
 
 \title[Practical Course]{Practical Course in Bioinformatics}
 \subtitle{Algorithm Group -- Final Presentation}
-\author[Berrendorf, Raissi, Lange]{Max Berrendorf \and Thomas Lange \and Tina Raissi}
+\author[Berrendorf, Raissi, Lange, Voit]{Max Berrendorf \and Thomas Lange \and Tina Raissi \and Matthias Voit}
 \institute[]{ZKF Research Group Computational Biology and Bioinformatics\\
 	Helmholtz Institute for Biomedical Engineering\\
 	RWTH University Hospital
